# design-pattern

./: .gitignore  .gitmodules
algorithm/: README.md
casbin-ex/: index.ts  package.json
casbin-ex/data/: keymatch_model.conf  policy.csv
custom-elements/: package-lock.json  package.json
flutter/platform_channels_benchmarks/: .gitignore  README.md  pubspec.yaml
grpc-http/: .gitignore  Makefile  README.md  go.mod  grpc.mk  pubspec.yaml
grpc-http/dart-impl/: client.dart  server.dart
grpc-http/proto/: buf.yaml  models.proto
grpc-http/python-impl/: server.py
grpc-http/tools/: go.mod  go.sum  grpc.mk
http-upload-file/: README.md
http-upload-file/client/: package-lock.json  package.json
http-upload-file/server/: go.mod  server.go
microfrontend/react1/: README.md  package-lock.json  package.json  tsconfig.base.json
monorepo/rush/: .gitignore  .gitmodules  README.md  rush.json
monorepo/rust/: README.md  rush.json
nx/: README.md
nx/nx-ex/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
nx/nx-mfe1/: README.md  nx.json  package-lock.json  package.json
nx/nx1/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
openapi/: README.md
openapi/yaml/: echo.yaml
ory/: .env  .gitignore  README.md  docker-compose.network.yml  docker-compose.yml  kong.config.sh  kong_postgres_password
ory/hello/: Dockerfile  main.go
ory/kratos/: kratos.yml
ory/oathkeeper/: oathkeeper.yml
webassembly/flutter-call-wasm/rust-crypto-module/: Cargo.toml
webassembly/flutter-call-wasm/rust-crypto-module/src/: lib.rs
(+119 files in other folders)
